--- a/PointOfSale/MainWindow.xaml
+++ b/PointOfSale/MainWindow.xaml
@@ -7,6 +7,6 @@
         mc:Ignorable="d"
         Title="MainWindow" Height="475" Width="800">
     <Grid>
-        <local:OrderControl></local:OrderControl>
+        <local:OrderControl x:Name="OrderControl"></local:OrderControl>
     </Grid>
 </Window>
