--- a/PointOfSale/MainWindow.xaml
+++ b/PointOfSale/MainWindow.xaml
@@ -5,8 +5,15 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PointOfSale"
         mc:Ignorable="d"
-        Title="MainWindow" Height="475" Width="800">
+        Title="MainWindow" Height="525" Width="800">
     <Grid>
-        <local:OrderControl x:Name="OrderControl"></local:OrderControl>
+        <Grid.ColumnDefinitions>
+            <ColumnDefinition Width="500"/>
+            <ColumnDefinition Width="300"/>
+            <ColumnDefinition Width="1"/>
+        </Grid.ColumnDefinitions>
+        <local:OrderControl x:Name="OrderControl" Grid.Column="2"/>
+        <local:OrderSummaryControl Grid.Column="1"/>
+        <local:MenuItemSelectionControl Grid.Column="0" Margin="0,73,0,0"/>
     </Grid>
 </Window>
