--- a/PointOfSale/OrderSummaryControl.xaml
+++ b/PointOfSale/OrderSummaryControl.xaml
@@ -5,12 +5,26 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PointOfSale"
              mc:Ignorable="d" 
-             d:DesignHeight="450" d:DesignWidth="200">
+             d:DesignHeight="548" d:DesignWidth="200">
     <UserControl.Resources>
-        <Style TargetType="ListBox">
+        <Style TargetType="ListView">
             <Setter Property="HorizontalContentAlignment" Value="Stretch"/>
         </Style>
+
+        <Style TargetType="TextBlock">
+            <!--Font-->
+            <Setter Property="FontSize" Value="15"/>
+            <Setter Property="FontFamily" Value="Cambria"/>
+
+            <!--Color scheme-->
+            <Setter Property="Background" Value="#CBBBA6"/>
+            <Setter Property="Foreground" Value="#000000"/>
+
+            <!--Text Alignment-->
+            <Setter Property="TextAlignment" Value="Left"/>
+        </Style>
     </UserControl.Resources>
+    
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition/>
@@ -18,7 +32,10 @@
         </Grid.RowDefinitions>
         <StackPanel>
             <TextBlock Text="{Binding Path=OrderNumber, StringFormat='Order {0}'}"/>
-            <ListBox ItemsSource="{Binding Path=Items}">
+            <ListView ItemsSource="{Binding Path=Items}" 
+                      FontFamily="Cambria" 
+                      FontSize="15"
+                      Height="490">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <Grid>
@@ -26,20 +43,21 @@
                                 <ColumnDefinition/>
                                 <ColumnDefinition Width="75"/>
                             </Grid.ColumnDefinitions>
-                            <TextBlock Text="{Binding}" FontWeight="Bold"/>
-                            <TextBox Grid.Column="1" Text="{Binding Path=Price, Mode=OneWay, StringFormat=c}"/>
+                            <TextBlock Text="{Binding}"/>
+                            <TextBlock Grid.Column="1" Text="{Binding Path=Price, Mode=OneWay, StringFormat=c}"/>
                         </Grid>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
-            </ListBox>
+            </ListView>
         </StackPanel>
+        
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition/>
                 <ColumnDefinition Width="75"/>
             </Grid.ColumnDefinitions>
-            <TextBox Text="Subtotal" Grid.Column="0"/>
-            <TextBox Text="{Binding Path=Subtotal, Mode=OneWay, StringFormat=c}" Grid.Column="1"/>
+            <TextBlock Text="Subtotal" Grid.Column="0"/>
+            <TextBlock Text="{Binding Path=Subtotal, Mode=OneWay, StringFormat=c}" Grid.Column="1"/>
         </Grid>
     </Grid>
 
