--- a/PointOfSale/MainWindow.xaml
+++ b/PointOfSale/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:PointOfSale"
         mc:Ignorable="d"
-        Title="MainWindow" Height="650" Width="1000" Background="#CBBBA6">
+        Title="MainWindow" Height="650" Width="1000" Background="#DDD6D6">
     <Grid>
         <local:OrderControl x:Name="OrderControl" />
     </Grid>
