--- a/PointOfSale/MenuItemSelectionControl.xaml
+++ b/PointOfSale/MenuItemSelectionControl.xaml
@@ -5,38 +5,29 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:PointOfSale"
              mc:Ignorable="d" 
-             d:DesignHeight="436" d:DesignWidth="500">
+             d:DesignHeight="650" d:DesignWidth="500">
     <UserControl.Resources>
         <Style TargetType="Button">
-            <!--Height and width options for buttons-->
+
             <Setter Property="Height" Value="60"/>
             <Setter Property="Width" Value="175"/>
-            <!--Alignment-->
+
             <Setter Property="VerticalContentAlignment" Value="Center"/>
             <Setter Property="HorizontalAlignment" Value="Center"/>
+            <Setter Property="TextBlock.TextAlignment" Value="Center"/>
 
-            <!-- Background is main color of the button
-            Foreground is the color of the text within the button -->
-            <Setter Property="Background" Value="#CBBBA6"/>
-            <!--This is the hex for leather-->
-            <Setter Property="Foreground" Value="#5DADEC"/>
-            <!--This is the hex for blue jeans-->
+            <Setter Property="Background" Value="#FF808FA0"/>
+            <Setter Property="Foreground" Value="#000000"/>
 
-            <!--Everything to due with font here-->
             <Setter Property="FontSize" Value="20"/>
             <Setter Property="FontFamily" Value="Cambria"/>
 
-            <!--Add a border to the buttons-->
             <Setter Property="BorderBrush" Value="Black"/>
             <Setter Property="BorderThickness" Value="2"/>
-
-            <!--When the mouse is hovering over a button the colors become inverted-->
-            <Style.Triggers>
-                <Trigger Property="IsMouseOver" Value="True">
-                    <Setter Property="Background" Value="#5DADEC"/>
-                    <Setter Property="Foreground" Value="#CBBBA6"/>
-                </Trigger>
-            </Style.Triggers>
+        </Style>
+        <Style TargetType="TextBlock">
+            <Setter Property="FontWeight" Value="Bold"/>
+            <Setter Property="FontSize" Value="15"/>
         </Style>
     </UserControl.Resources>
     <Grid>
