Added Customization menus and fixed Special Instruction Binding

--- a/PointOfSale/CustumisationScreen/CowpokeChiliCustumization.xaml
+++ b/PointOfSale/CustumisationScreen/CowpokeChiliCustumization.xaml
@@ -9,9 +9,10 @@
     <StackPanel>
         
         <TextBlock FontSize="40">Customize this Chili!</TextBlock>
-        <StackPanel Orientation="Horizontal">
-            <CheckBox IsChecked="{Binding Path=Cheese}"/>
-            <TextBlock Text="Cheese"/>
+        <StackPanel>
+            <CheckBox IsChecked="{Binding Path=Cheese}">Cheese</CheckBox>
+            <CheckBox IsChecked="{Binding Path=SourCream}">Sour Cream</CheckBox>
+            <CheckBox IsChecked="{Binding Path=GreenOnions}">Green Onion</CheckBox>
         </StackPanel>
     </StackPanel>
 </UserControl>
