--- a/PointOfSale/OrderSummaryControl.xaml
+++ b/PointOfSale/OrderSummaryControl.xaml
@@ -43,7 +43,7 @@
                             </Grid.RowDefinitions>
                             <TextBlock Text="{Binding}"/>
                             <TextBlock Text="{Binding Path=Price, StringFormat=c}" Grid.Column="1" TextAlignment="Right"/>
-                            <ListView ItemsSource="{Binding Path=SpecialInstructions, StringFormat=c}" Grid.Row="1" Grid.ColumnSpan="2"/>
+                            <ListView ItemsSource="{Binding Path=SpecialInstructions}" Grid.Row="1" Grid.ColumnSpan="2"/>
                         </Grid>
                     </DataTemplate>
                 </ListBox.ItemTemplate>
