--- a/PointOfSale/CustumisationScreen/AngryChickenCustimization.xaml
+++ b/PointOfSale/CustumisationScreen/AngryChickenCustimization.xaml
@@ -6,7 +6,18 @@
              xmlns:local="clr-namespace:CowboyCafe.PointIOfSale.CustumisationScreen"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+    <UserControl.Resources>
+        <Style TargetType="CheckBox">
+            <Setter Property="Height" Value="35"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+        </Style>
+    </UserControl.Resources>
+    <StackPanel>
         <TextBlock FontSize="40">Customize this Chicken!</TextBlock>
-    </Grid>
+        <StackPanel>
+            <CheckBox IsChecked="{Binding Path=Pickle}">Pickle</CheckBox>
+            <CheckBox IsChecked="{Binding Path=Bread}">Bread</CheckBox>
+        </StackPanel>
+    </StackPanel>
 </UserControl>
