--- a/PointOfSale/CustumisationScreen/CowpokeChiliCustumization.xaml
+++ b/PointOfSale/CustumisationScreen/CowpokeChiliCustumization.xaml
@@ -6,8 +6,14 @@
              xmlns:local="clr-namespace:PointOfSale.CustumisationScreen"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="600">
+    <UserControl.Resources>
+        <Style TargetType="CheckBox">
+            <Setter Property="Height" Value="35"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+        </Style>
+    </UserControl.Resources>
     <StackPanel>
-        
         <TextBlock FontSize="40">Customize this Chili!</TextBlock>
         <StackPanel>
             <CheckBox IsChecked="{Binding Path=Cheese}">Cheese</CheckBox>
