--- a/PointOfSale/CustumisationScreen/JerkedSodaCustimization.xaml
+++ b/PointOfSale/CustumisationScreen/JerkedSodaCustimization.xaml
@@ -3,10 +3,71 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:scr="clr-namespace:CowboyCafe.Data;assembly=CowboyCafe.Data"
              xmlns:local="clr-namespace:CowboyCafe.PointIOfSale.CustumisationScreen"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+    <UserControl.Resources>
+        <Style TargetType="CheckBox">
+            <Setter Property="Height" Value="35"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+        </Style>
+
+        <Style TargetType="RadioButton">
+            <Setter Property="Height" Value="35"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+        </Style>
+    </UserControl.Resources>
+    <StackPanel>
+        <StackPanel.Resources>
+            <local:EnumBooleanConverter x:Key="enumBooleanConverter" />
+        </StackPanel.Resources>
         <TextBlock FontSize="40">Customize this Soda!</TextBlock>
-    </Grid>
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition />
+            </Grid.ColumnDefinitions>
+            <Grid.RowDefinitions>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+            <CheckBox IsChecked="{Binding Path=Ice}">Ice</CheckBox>
+            
+            <RadioButton GroupName="Flavor" Grid.Column="0" Grid.Row="2" 
+                          IsChecked="{Binding Path=Flavor, Converter={StaticResource enumBooleanConverter}, 
+                          ConverterParameter={x:Static scr:SodaFlavor.CreamSoda}}">Cream Soda</RadioButton>
+            <RadioButton GroupName="Flavor" Grid.Column="0" Grid.Row="3" 
+                         IsChecked="{Binding Path=Flavor, Converter={StaticResource enumBooleanConverter}, 
+                         ConverterParameter={x:Static scr:SodaFlavor.OrangeSoda}}">Orange Soda</RadioButton>
+            <RadioButton GroupName="Flavor" Grid.Column="0" Grid.Row="4" 
+                         IsChecked="{Binding Path=Flavor, Converter={StaticResource enumBooleanConverter}, 
+                          ConverterParameter={x:Static scr:SodaFlavor.Sarsparilla}}">Sarsparilla</RadioButton>
+            <RadioButton GroupName="Flavor" Grid.Column="0" Grid.Row="5" 
+                         IsChecked="{Binding Path=Flavor, Converter={StaticResource enumBooleanConverter}, 
+                          ConverterParameter={x:Static scr:SodaFlavor.BirchBeer}}">Birch Beer</RadioButton>
+            <RadioButton GroupName="Flavor" Grid.Column="0" Grid.Row="6" 
+                         IsChecked="{Binding Path=Flavor, Converter={StaticResource enumBooleanConverter}, 
+                          ConverterParameter={x:Static scr:SodaFlavor.RootBeer}}">Root Beer</RadioButton>
+
+            <RadioButton GroupName="Size" Grid.Column="1" Grid.Row="0" 
+                         IsChecked="{Binding Path=Size, Converter={StaticResource enumBooleanConverter}, 
+                          ConverterParameter={x:Static scr:Size.Small}}">Small</RadioButton>
+            <RadioButton GroupName="Size" Grid.Column="1" Grid.Row="1" 
+                         IsChecked="{Binding Path=Size, Converter={StaticResource enumBooleanConverter}, 
+                          ConverterParameter={x:Static scr:Size.Medium}}">Medium</RadioButton>
+            <RadioButton GroupName="Size" Grid.Column="1" Grid.Row="2" 
+                         IsChecked="{Binding Path=Size, Converter={StaticResource enumBooleanConverter}, 
+                          ConverterParameter={x:Static scr:Size.Large}}">Large</RadioButton>
+        </Grid>
+    </StackPanel>
 </UserControl>
