--- a/PointOfSale/CustumisationScreen/TexasTripleBurgerCustimization.xaml
+++ b/PointOfSale/CustumisationScreen/TexasTripleBurgerCustimization.xaml
@@ -6,7 +6,26 @@
              xmlns:local="clr-namespace:CowboyCafe.PointIOfSale.CustumisationScreen"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+    <UserControl.Resources>
+        <Style TargetType="CheckBox">
+            <Setter Property="Height" Value="35"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+        </Style>
+    </UserControl.Resources>
+    <StackPanel>
         <TextBlock FontSize="40">Customize this Triple Burger!</TextBlock>
-    </Grid>
+        <StackPanel>
+            <CheckBox IsChecked="{Binding Path=Bun}">Bun</CheckBox>
+            <CheckBox IsChecked="{Binding Path=Ketchup}">Ketchup</CheckBox>
+            <CheckBox IsChecked="{Binding Path=Mustard}">Mustard</CheckBox>
+            <CheckBox IsChecked="{Binding Path=Pickle}">Pickle</CheckBox>
+            <CheckBox IsChecked="{Binding Path=Cheese}">Cheese</CheckBox>
+            <CheckBox IsChecked="{Binding Path=Tomato}">Tomato</CheckBox>
+            <CheckBox IsChecked="{Binding Path=Lettuce}">Lettuce</CheckBox>
+            <CheckBox IsChecked="{Binding Path=Mayo}">Mayo</CheckBox>
+            <CheckBox IsChecked="{Binding Path=Bacon}">Bacon</CheckBox>
+            <CheckBox IsChecked="{Binding Path=Egg}">Egg</CheckBox>
+        </StackPanel>
+    </StackPanel>
 </UserControl>
