--- a/PointOfSale/CustumisationScreen/TrailBurgerCustimization.xaml
+++ b/PointOfSale/CustumisationScreen/TrailBurgerCustimization.xaml
@@ -6,7 +6,21 @@
              xmlns:local="clr-namespace:CowboyCafe.PointIOfSale.CustumisationScreen"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <TextBlock FontSize="40">Customize this Burger!</TextBlock>
-    </Grid>
+    <UserControl.Resources>
+        <Style TargetType="CheckBox">
+            <Setter Property="Height" Value="35"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+        </Style>
+    </UserControl.Resources>
+    <StackPanel>
+        <TextBlock FontSize="40">Customize this Double Burger!</TextBlock>
+        <StackPanel>
+            <CheckBox IsChecked="{Binding Path=Bun}">Bun</CheckBox>
+            <CheckBox IsChecked="{Binding Path=Ketchup}">Ketchup</CheckBox>
+            <CheckBox IsChecked="{Binding Path=Mustard}">Mustard</CheckBox>
+            <CheckBox IsChecked="{Binding Path=Pickle}">Pickle</CheckBox>
+            <CheckBox IsChecked="{Binding Path=Cheese}">Cheese</CheckBox>
+        </StackPanel>
+    </StackPanel>
 </UserControl>
