--- a/PointOfSale/CustumisationScreen/WaterCustimization.xaml
+++ b/PointOfSale/CustumisationScreen/WaterCustimization.xaml
@@ -3,10 +3,37 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
+             xmlns:scr="clr-namespace:CowboyCafe.Data;assembly=CowboyCafe.Data"
              xmlns:local="clr-namespace:CowboyCafe.PointIOfSale.CustumisationScreen"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
+    <UserControl.Resources>
+        <Style TargetType="CheckBox">
+            <Setter Property="Height" Value="35"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+        </Style>
+
+        <Style TargetType="RadioButton">
+            <Setter Property="Height" Value="35"/>
+            <Setter Property="FontSize" Value="20"/>
+            <Setter Property="VerticalContentAlignment" Value="Center"/>
+        </Style>
+    </UserControl.Resources>
+
+    <StackPanel>
+        <StackPanel.Resources>
+            <local:EnumBooleanConverter x:Key="enumBooleanConverter" />
+        </StackPanel.Resources>
         <TextBlock FontSize="40">Customize this Water!</TextBlock>
-    </Grid>
+        <CheckBox IsChecked="{Binding Path=Lemon}">Lemon</CheckBox>
+        <CheckBox IsChecked="{Binding Path=Ice}">Ice</CheckBox>
+
+        <RadioButton IsChecked="{Binding Path=Size, Converter={StaticResource enumBooleanConverter}, 
+            ConverterParameter={x:Static scr:Size.Small}}">Small</RadioButton>
+        <RadioButton IsChecked="{Binding Path=Size, Converter={StaticResource enumBooleanConverter}, 
+            ConverterParameter={x:Static scr:Size.Medium}}">Medium</RadioButton>
+        <RadioButton IsChecked="{Binding Path=Size, Converter={StaticResource enumBooleanConverter}, 
+            ConverterParameter={x:Static scr:Size.Large}}">Large</RadioButton>
+    </StackPanel>
 </UserControl>
