--- a/PointOfSale/MainWindow.xaml
+++ b/PointOfSale/MainWindow.xaml
@@ -3,11 +3,13 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+        xmlns:scr="clr-namespace:CowboyCafe.PointIOfSale"
         xmlns:local="clr-namespace:PointOfSale"
         mc:Ignorable="d"
         Title="MainWindow" Height="650" Width="1050" Background="#DDD6D6">
-    <Grid>
-        <local:OrderControl x:Name="OrderControl" />
-        
-    </Grid>
+
+    
+    <Border Name="Container">
+        <local:OrderControl/>
+    </Border>
 </Window>
