--- a/Website/wwwroot/css/site.css
+++ b/Website/wwwroot/css/site.css
@@ -1,6 +1,32 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+form#cowboy-menu {
+    display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-template-rows: auto auto;
+}
+
+#search {
+    grid-column-start: 1;
+    grid-column-end: 3;
+    text-align: center;
+}
+
+#filters {
+    display: flex;
+    flex-direction: column;
+}
+
+    #filters input[type=number] {
+        width: 3rem;
+    }
+
+    #filters h4 {
+        margin-bottom: 0.2rem;
+    }
+
+
 a.navbar-brand {
   white-space: normal;
   text-align: center;
