--- a/Website/wwwroot/css/site.css
+++ b/Website/wwwroot/css/site.css
@@ -1,6 +1,19 @@
 ﻿/* Please see documentation at https://docs.microsoft.com/aspnet/core/client-side/bundling-and-minification
 for details on configuring this project to bundle and minify static web assets. */
 
+.flex-columns {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+}
+
+@media (max-width: 490px) {
+    .flex-columns {
+        flex-direction: column;
+        justify-content: space-around;
+    }
+}
+
 form#cowboy-menu {
     display: grid;
     grid-template-columns: 1fr 3fr;
